# modela-python-sdk

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  gen_crd_docs.go  out.py.py  pydoc-markdown.yaml  pyproject.toml  req.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  build.sh  conf.py  index.rst  installation.rst  make.bat  modela.Configuration.rst  modela.ModelaException.rst  modela.Resource.rst  modela.common.rst  modela.data.DataPipeline.rst  modela.data.DataPipelineRun.rst  modela.data.DataProduct.rst  modela.data.DataProductVersion.rst  modela.data.DataSource.rst  modela.data.Dataset.rst  modela.data.Entity.rst  modela.data.Feature.rst  modela.data.FeatureHistogram.rst  modela.data.FeaturePipeline.rst  modela.data.FeaturePipelineRun.rst  modela.data.Featureset.rst  modela.data.LabelingPipeline.rst  modela.data.LabelingPipelineRun.rst  modela.data.Recipe.rst  modela.data.RecipeRun.rst  modela.data.SqlQuery.rst  modela.data.SqlQueryRun.rst  modela.data.WebRequest.rst  modela.data.WebRequestRun.rst  modela.data.common.rst  modela.data.models.rst  modela.data.rst  modela.inference.CronPrediction.rst  modela.inference.Curtain.rst  modela.inference.DataApp.rst  modela.inference.InferenceService.rst  modela.inference.Prediction.rst  modela.inference.Predictor.rst  modela.inference.common.rst  (+46 more)
hack/: gen_pb.sh  run_apigateway.py  run_predictor.py  transpose_documentation.py  validate_datamodels.py
mdpyclient/: cli.py  client.py
modela/: Accounts.py  Configuration.py  DataProducts.py  DataSources.py  ModelaException.py  Resource.py  __init__.py  client.py  common.py  server.py  util.py
modela_python_sdk/: account_client.py  client.py  server.py
modeld_python_sdk/: client.py
proto/: __init__.py  prediction_server.proto  prediction_server_pb2.py  prediction_server_pb2_grpc.py
tests/: __init__.py  _test_example.py  api_server.crt  inference_server.crt  test_account_client.py  test_configuration.py  test_dataproducts_client.py  test_dataproductversion_client.py  (+14 more)
(+71 files in other folders)
