[tool.poetry]
name = "modela-python-sdk"
version = "0.4.414"
description = "python client sdk for the modela auto ml system."
authors = ["tsagi <tsagi@metaprov.com>"]
keywords = ["modela", "automl"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/metaprov/modela-python-sdk"
repository = "https://github.com/metaprov/modela/modela-python-sdk"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
modelaapi = "0.4.414"
grpcio = "^1.43.0"
protobuf= "^3.19.3"
kubernetes ="^21.7.0"



[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
