[tool.black]
line-length = 120
target-version = ["py38"]

[tool.poetry]
name = "modela"
version = "0.79"
description = "python client sdk for the modela auto ml system."
authors = ["liam <liam@metaprov.com>"]
keywords = ["modela", "automl"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/metaprov/modela-python-sdk"
repository = "https://github.com/metaprov/modela/modela-python-sdk"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.8"
modelaapi = "^0.5.234"
grpcio = "^1.44.0"
protobuf= "^3.19.3"
kubernetes ="^21.7.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
